arrows in trees are time

--- a/fm24.tex
+++ b/fm24.tex
@@ -242,8 +242,8 @@ represents measurement events with final measurement events presented
 within green boxes. The prefixes \texttt{c\_} and  \texttt{r\_} 
 represent the corruption and repair of components. Both
 corruption and repair events are classified as adversary events and
-are presented within yellow and orange boxes respectively. This
-abstract labeling scheme mirrors that of the Chase output.
+are presented within yellow and orange boxes respectively. Arrows 
+represent chronological time. This abstract labeling scheme mirrors that of the Chase output.
 
 \begin{figure}[hbtp]
     \centering 
